# xze

./: AGENTS.md  Cargo.toml  PR_PHASE2_SUMMARY.md  README.md  docker-compose.backend.yaml  docker-compose.postgres.yaml  test_queries.json
crates/cli/: Cargo.toml
crates/cli/src/: commands.rs  config.rs  lib.rs  output.rs
crates/cli/src/commands/: analyze.rs  chunk.rs  classify.rs  init.rs  load.rs  search.rs  serve.rs  validate.rs
crates/core/: Cargo.toml  main.rs
crates/core/benches/: intent_classification_bench.rs  keyword_extraction_bench.rs
crates/core/src/: ab_testing.rs  change_detector.rs  config.rs  document_enrichment.rs  error.rs  keyword_extractor.rs  lib.rs  monitoring.rs  performance_profiler.rs  pipeline.rs  prompt_templates.rs  quality_validator.rs  types.rs  watcher.rs
crates/core/src/ab_testing/: mod.rs
crates/core/src/ai/: client.rs  confidence.rs  context.rs  health.rs  intent_classifier.rs  intent_types.rs  metrics.rs  mod.rs  prompts.rs  validator.rs
crates/core/src/documentation/: crossref.rs  generator.rs  index.rs  mod.rs  processor.rs  validator.rs
crates/core/src/git/: credentials.rs  creds.rs  gitlab.rs  mod.rs  pr.rs
crates/core/src/kb/: categorizer.rs  error.rs  hash.rs  loader.rs  mod.rs  store.rs
crates/core/src/pipeline/: controller.rs  ctrl.rs  job.rs  scheduler.rs  xze-core-pipeline.rs
crates/core/src/repository/: analyzer.rs  manager.rs  mod.rs  parser.rs  struct.rs
crates/core/src/search/: README.md  embedding_cache.rs  mod.rs
crates/core/src/semantic/: chunker.rs  embeddings.rs  mod.rs  search.rs  similarity.rs  splitter.rs  types.rs
crates/core/templates/: api_docs.hbs  code_analysis.hbs  explanation.hbs  howto.hbs  pr_template.hbs  reference.hbs  summary.hbs  tutorial.hbs
crates/core/tests/: README.md  git_credentials_tests.rs  git_integration_tests.rs  integration_keyword_extraction.rs  kb_incremental_loading_tests.rs  pr_management_tests.rs  semantic_chunks_integration_tests.rs
crates/core/tests/common/: mod.rs
crates/infra/: Cargo.toml
crates/infra/src/: cache.rs  filesystem.rs  lib.rs  logger.rs  ollama.rs
crates/serve/: Cargo.toml
crates/serve/benches/: search_benchmarks.rs
crates/serve/examples/: generate_openapi_spec.rs
crates/serve/src/: api.rs  handlers.rs  lib.rs  middleware.rs  server.rs
crates/serve/src/api/v1/: handlers.rs  mod.rs  openapi.rs
crates/serve/src/cache/: mod.rs  search_cache.rs
crates/serve/src/middleware/: mod.rs  rate_limit.rs  security.rs
crates/serve/src/search/: README.md  handlers.rs  metrics.rs  mod.rs  openapi.rs  types.rs
crates/serve/src/search/analytics/: README.md  aggregator.rs  collector.rs  handlers.rs  mod.rs  types.rs
crates/serve/src/search/websocket/: README.md  connection.rs  handler.rs  mod.rs  streaming.rs  types.rs
crates/serve/tests/: api_backward_compatibility_tests.rs  api_versioning_tests.rs  contract_tests.rs  search_integration_tests.rs
crates/vscode/: Cargo.toml
crates/vscode/src/: lib.rs
docs/: README.md  xze-architecture.md  xze-prompt.md
docs/explanation/: README.md  agents_md_update.md  ai_provider_refactoring_plan.md  clippy_fixes_phase2.md  diataxis_directory_naming.md  documentation_cleanup_backup_inventory.md  documentation_cleanup_plan.md  git_operations.md  implement_llm_keyword_extraction.md  implementation_roadmap.md  implementations.md  incremental_loading_implementation_plan.md  incremental_loading_implementation_summary.md  incremental_loading_phase6_summary.md  integration_tests_summary.md  intent_classification_design.md  intent_classification_implementation_plan.md  intent_classification_summary.md  intent_classification_verification_report.md  intent_classification_verification_summary.md  llm_keyword_extraction_rust_refactor.md  metrics_fix_completion_summary.md  metrics_registration_fix.md  model_based_keyword_extraction_proposal.md  phase0_completion_summary.md  phase0_llm_keyword_extraction_implementation.md  phase1_1_summary.md  phase1_2_completion.md  phase1_4_completion.md  phase1_4_summary.md  phase1_complete.md  phase1_completion_summary.md  phase1_delivery_summary.md  phase1_hash_tracking_implementation.md  phase1_llm_keyword_extraction_implementation.md  phase1_semantic_chunking_core_types_implementation.md  phase2_1_completion.md  phase2_1_summary.md  phase2_2_changes.md  phase2_2_completion.md  (+72 more)
docs/explanations/: README.md  agents_md_update.md  ai_analysis_service.md  cli_argument_conflict_fix.md  clippy_fixes_phase2.md  git_integration.md  implement_llm_keyword_extraction.md  implementation_roadmap.md  incremental_loading_architecture.md  incremental_loading_implementation_plan.md  incremental_loading_implementation_summary.md  incremental_loading_phase6_summary.md  integration_tests_summary.md  intent_classification_implementation_plan.md  intent_classification_summary.md  intent_classification_verification_report.md  intent_classification_verification_summary.md  llm_keyword_extraction_rust_refactor.md  metrics_fix_completion_summary.md  metrics_registration_fix.md  phase0_completion_summary.md  phase0_llm_keyword_extraction_implementation.md  phase1_1_completion.md  phase1_2_completion.md  phase1_2_summary.md  phase1_3_completion.md  phase1_3_summary.md  phase1_completion_summary.md  phase1_delivery_summary.md  phase1_hash_tracking_implementation.md  phase1_llm_keyword_extraction_implementation.md  phase1_semantic_chunking_core_types_implementation.md  phase2_1_completion.md  phase2_1_summary.md  phase2_2_changes.md  phase2_2_completion.md  phase2_2_summary.md  phase2_3_changes.md  phase2_completion_summary.md  phase2_file_discovery_implementation.md  (+67 more)
docs/how_to/: README.md  chunking_configuration.md  configure_llm_keyword_extraction.md  create_pull_requests.md  implement_semantic_chunking.md  incremental_loading_guide.md  (+9 more)
examples/: measure_search_quality.rs  prototype_llm_extractor.rs
migrations/: 20250101_semantic_chunks.sql  20250115_search_optimization.sql  20250116_saved_searches.sql  20251025_add_file_hash.sql
src/: main.rs
tests/: semantic_chunking_integration.rs
(+21 files in other folders)
