[package]
name = "xze-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "CLI interface for XZe Pipeline Documentation Tool"
keywords.workspace = true
categories.workspace = true

[dependencies]
xze-core = { path = "../core" }

# CLI support
clap = { workspace = true }
tokio = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# File system
walkdir = { workspace = true }

# HTTP client
reqwest = { workspace = true }

# UUID generation
uuid = { workspace = true }

# CPU detection
num_cpus = "1.16"

# Terminal detection
atty = "0.2"

# Directories
dirs = "5.0"

[dev-dependencies]
tokio-test = "0.4"
tempfile = { workspace = true }
