[package]
name = "xze-core"
version = "0.1.0"
edition = "2021"
description = "Core functionality for XZe documentation pipeline tool"
license = "MIT OR Apache-2.0"
repository = "https://github.com/xbcsmith/xze"

[dependencies]
# Async runtime
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# HTTP client for Ollama
reqwest = { version = "0.11", features = ["json", "stream"] }

# Git operations
git2 = "0.18"

# File system operations
walkdir = "2.4"
tempfile = "3.8"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Date and time
chrono = { version = "0.4", features = ["serde"] }

# UUID generation
uuid = { version = "1.0", features = ["v4", "serde"] }

# Configuration
config = "0.14"

# Template engine for prompts
handlebars = "4.5"

# URL parsing
url = "2.4"

# Pattern matching
glob = "0.3"
regex = "1.10"

# Caching (Phase 2: Multi-Intent Detection)
moka = { version = "0.12", features = ["future"] }
lru = "0.12"

# Cryptographic hashing
sha2 = "0.10"

# Semantic chunking dependencies
once_cell = "1.19"
unicode-segmentation = "1.10"
itertools = "0.12"
ndarray = "0.15"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "postgres", "macros", "migrate"] }

# Hash maps with better performance
indexmap = "2.1"

# Language detection
tree-sitter = "0.20"
tree-sitter-rust = "0.20"
tree-sitter-javascript = "0.20"
tree-sitter-python = "0.20"
tree-sitter-go = "0.20"
tree-sitter-java = "0.20"
async-trait = "0.1.89"
urlencoding = "2.1.3"
rand = "0.9.2"

[dev-dependencies]
tokio-test = "0.4"
mockito = "1.2"
assert_matches = "1.5"
testcontainers = "0.15"
criterion = { version = "0.5", features = ["async_tokio"] }

[features]
default = ["ollama"]
ollama = []
openai = ["async-openai"]
metrics = ["prometheus"]

[dependencies.async-openai]
version = "0.14"
optional = true

[dependencies.prometheus]
version = "0.13"
optional = true
default-features = false

[[bench]]
name = "intent_classification_bench"
harness = false

[[bench]]
name = "keyword_extraction_bench"
harness = false
