[package]
name = "xze-infra"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "Infrastructure components for XZe Pipeline Documentation Tool"
keywords.workspace = true
categories.workspace = true

[dependencies]
xze-core = { path = "../core" }

# Async runtime
tokio = { workspace = true }
futures = { workspace = true }

# HTTP client
reqwest = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }

# Git operations
git2 = { workspace = true }

# File system
walkdir = { workspace = true }
tempfile = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Date/time
chrono = { workspace = true }

# UUID
uuid = { workspace = true }

# Configuration
config = { workspace = true }

# Template engine
handlebars = { workspace = true }

# URL parsing
url = { workspace = true }

# Hashing
md5 = "0.7"

[dev-dependencies]
tokio-test = "0.4"
tempfile = { workspace = true }
mockito = "1.2"
