[package]
name = "xze-serve"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "Web server interface for XZe Pipeline Documentation Tool"
keywords.workspace = true
categories.workspace = true

[dependencies]
xze-core = { path = "../core" }

# Web server
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tokio = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }

# HTTP client
reqwest = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# UUID
uuid = { workspace = true }

# Date/time
chrono = { workspace = true }

# Configuration
config = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"
tempfile = { workspace = true }
axum-test = "14.0"
