[package]
name = "xze-serve"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "Web server interface for XZe Pipeline Documentation Tool"
keywords.workspace = true
categories.workspace = true

[features]
default = []
openapi = ["dep:utoipa", "dep:utoipa-swagger-ui"]
metrics = ["dep:prometheus", "dep:once_cell"]

[dependencies]
xze-core = { path = "../core" }

# Web server
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tokio = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }

# HTTP client
reqwest = { workspace = true }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "postgres"] }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# UUID
uuid = { workspace = true }

# Date/time
chrono = { workspace = true }

# Configuration
config = { workspace = true }

# OpenAPI (optional)
utoipa = { version = "4.2", features = ["axum_extras", "chrono", "uuid"], optional = true }
utoipa-swagger-ui = { version = "6.0", features = ["axum"], optional = true }

# Rate limiting
tower_governor = "0.3"
governor = "0.6"

# Caching
moka = { version = "0.12", features = ["future"] }

# Metrics (optional)
prometheus = { version = "0.13", optional = true }
once_cell = { version = "1.19", optional = true }

# Base64 encoding for cursors
base64 = "0.21"

[dev-dependencies]
tokio-test = "0.4"
tempfile = { workspace = true }
axum-test = "14.0"
criterion = { version = "0.5", features = ["async_tokio"] }

[[bench]]
name = "search_benchmarks"
harness = false
