[package]
name = "xze-vscode"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "VSCode extension backend for XZe Pipeline Documentation Tool"
keywords.workspace = true
categories.workspace = true

[dependencies]
xze-core = { path = "../core" }

# Async runtime
tokio = { workspace = true }
futures = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }

# HTTP server for extension communication
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }

# HTTP client
reqwest = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Date/time
chrono = { workspace = true }

# UUID
uuid = { workspace = true }

# Configuration
config = { workspace = true }

# File system
walkdir = { workspace = true }
tempfile = { workspace = true }

# URL parsing
url = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"
tempfile = { workspace = true }

[features]
default = []
lsp = ["lsp-server", "lsp-types"]

[dependencies.lsp-server]
version = "0.7"
optional = true

[dependencies.lsp-types]
version = "0.94"
optional = true
